--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,22 +1,22 @@
 //Change version here + bump version code.  In Hooks/wakelocks.java, and in xml/preferences.xml
 apply plugin: 'com.android.application'
-
-buildscript {
-    repositories {
-        maven { url 'http://repo1.maven.org/maven2' }
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
-    }
-}
+apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '22.0.1'
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = "17"
+    }
+    compileSdk 34
     defaultConfig {
+        namespace "com.ryansteckler.nlpunbounce"
         applicationId 'com.ryansteckler.nlpunbounce'
-        minSdkVersion 16
-        targetSdkVersion 21
+        minSdkVersion 21
+        targetSdkVersion 35
         versionCode 91
         versionName '3.3.6'
     }
@@ -26,21 +26,25 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    productFlavors {
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+
+    dependenciesInfo {
+        // Disables dependency metadata when building APKs.
+        includeInApk = false
+        // Disables dependency metadata when building Android App Bundles.
+        includeInBundle = false
     }
 }
 
-repositories {
-    mavenCentral()
-}
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    def appcompat_version = "1.7.0"
+    def material_version = "1.12.0"
+    implementation "com.google.android.material:material:$material_version"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    // For loading and tinting drawables on older versions of the platform
+    implementation "androidx.appcompat:appcompat-resources:$appcompat_version"
+    implementation "androidx.drawerlayout:drawerlayout:1.2.0"
+    compileOnly fileTree(dir: 'libs', include: ['*.jar'])
     //    compile 'com.google.code.gson:gson:2.3'
-    provided files('XposedBridgeApi-20150213.jar')
-    compile 'com.android.support:support-v4:23.1.0'
 }
